[gd_scene load_steps=5 format=3 uid="uid://d3krym437dc1h"]

[ext_resource type="Script" path="res://web_control/scripts/web_control.gd" id="1_wfs0e"]
[ext_resource type="Script" path="res://addons/godottpd/http_server.gd" id="2_bgimu"]
[ext_resource type="Script" path="res://web_control/scripts/json_server.gd" id="3_r8ejs"]
[ext_resource type="Texture2D" uid="uid://gcmq7ycfmmen" path="res://icon.svg" id="4_lbl5p"]

[node name="Main" type="Node"]

[node name="WebControl" type="MarginContainer" parent="." node_paths=PackedStringArray("http_server", "ws_server", "qr_code_texture_rect")]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16
script = ExtResource("1_wfs0e")
http_server = NodePath("HttpServer")
http_public_folder = "res://web_control/public"
ws_server = NodePath("ControllerServer")
qr_code_texture_rect = NodePath("CenterContainer/QrCode")

[node name="HttpServer" type="Node" parent="WebControl"]
script = ExtResource("2_bgimu")

[node name="ControllerServer" type="Node" parent="WebControl"]
script = ExtResource("3_r8ejs")

[node name="CenterContainer" type="CenterContainer" parent="WebControl"]
layout_mode = 2
mouse_filter = 2

[node name="QrCode" type="TextureRect" parent="WebControl/CenterContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="WebControl"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HBoxContainer" type="HBoxContainer" parent="WebControl/VBoxContainer"]
layout_mode = 2

[node name="StartHttpButton" type="Button" parent="WebControl/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Restart Server"

[node name="PanelContainer" type="Panel" parent="WebControl"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="Joy" type="TextureRect" parent="WebControl/PanelContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_lbl5p")
expand_mode = 1

[connection signal="pressed" from="WebControl/VBoxContainer/HBoxContainer/StartHttpButton" to="WebControl" method="start_server"]
